# spaCEinvaders

./: .gitignore  .gitmodules  README.md
client/: .gitignore  CMakeLists.txt  README.md
client/src/: CMakeLists.txt  connection.c  connection.h  main.c
client/src/connections/: csocket.c  csocket.h
client/src/gui/: item.c  item.h
client/src/lib/SDL2/docs/: README-cmake.md
client/src/lib/SDL2/x86_64-w64-mingw32/include/SDL2/: SDL_assert.h  SDL_keyboard.h
server/: .gitignore
server/src/: Main.java
server/src/connection/: Connection.java
server/src/connections/: Connection.java  Observer.java  PlayerObserver.java  Server.java  Subject.java
server/src/game/: Game.java  MatrixGame.java  MatrizGame.java
server/test/game/: GameTest.java  MatrixGameTest.java  MatrizGameTest.java
